Modificacion de todas las pestañas

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
             </div> -->
             <div class="tm-contact-info">
                 <p>Para consultas, completa nuestro formulario externo:</p>
-                <a href="https://forms.gle/tuEnlaceGoogleForms" target="_blank" class="btn btn-danger">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdICGEhS3fi61HEFEZDNDK_PEIx-lZlnyUwZh99fMnqc1EaWQ/viewform?embedded=true" target="_blank" class="btn btn-danger">
                     <i class="fas fa-external-link-alt"></i> Formulario de Contacto
                 </a>
             </div>
