--- a/photo-details.html
+++ b/photo-details.html
@@ -107,6 +107,9 @@
 
                     <div class="text-center mb-5">
                         <a href="#" class="btn btn-primary tm-btn-big">Download</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe4No_tAeSoTw0b1lpp6D93HVFDczfLQ6VmsaHFm_3Jqac9YA/viewform?embedded=true" target="_blank" class="btn btn-danger">
+                            <i class="fas fa-external-link-alt"></i> Cuentanos tu experiencia
+                        </a>
                     </div>
                     <div class="mb-4 d-flex flex-wrap">
                         <div class="mr-4 mb-2">
@@ -138,27 +141,21 @@
                     </div>
                     <div>
                         <h3 class="tm-text-gray-dark mb-3">Etiquetas</h3>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Magia</a>
+                        <!-- <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="social-media-title">Magia</a>
                         <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Ilusionismo</a>
                         <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Trucos</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Prestidigitación</a>
                         <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Abracadabra</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Espectáculo</a>
                         <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Cartas</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Conjuro</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Escapismo</a>
                         <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Sombrero</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Varita</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Espejismo</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Fantasía</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Encantamiento</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Misticismo</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Hocus Pocus</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Hipnotismo</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Prestidigitador</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Apariciones</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Desapariciones</a>
-                    </div>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Varita</a>-->
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags1">Magia</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags2">Ilusionismo</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags3">Trucos</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags4">Abracadabra</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags5">Cartas</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags6">Sombrero</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags7">Varita</p>
+                    </div> 
                 </div>
             </div>
         </div>
