--- a/video-detail.html
+++ b/video-detail.html
@@ -70,7 +70,7 @@
         <div class="row mb-4">
             <h2 class="col-12 tm-text-primary" id="heading-s">Sesión de fotos en la Universidad</h2>
         </div>
-        <div class="row tm-mb-90">            
+        <div class="row tm-mb-90">        
             <div class="col-xl-8 col-lg-7 col-md-6 col-sm-12" id="videoGallery">
                 <!-- <video autoplay muted loop controls id="tm-video">
                     <source src="video/hero.mp4" type="video/mp4">
@@ -83,36 +83,47 @@
             </div>
             <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12">
                 <div class="tm-bg-gray tm-video-details">
-                    <p class="mb-4">
-                        Aliquam varius posuere nunc, nec imperdiet neque condimentum at. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Please support us by contributing <a href="https://paypal.me/templatemo" target="_parent" rel="sponsored">a small donation</a> via PayPal.
+                    <h3 class="tm-text-gray-dark mb-3">Descripción</h3>    
+                    <p class="mb-4" id="titles">
+                        <!-- Aliquam varius posuere nunc, nec imperdiet neque condimentum at. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Please support us by contributing <a href="https://paypal.me/templatemo" target="_parent" rel="sponsored">a small donation</a> via PayPal. -->
+                        Este video captura la esencia de la amistad a través de una sesión de fotos única entre dos amigas. Desde risas contagiosas hasta momentos de complicidad, cada imagen cuenta la historia de una amistad verdadera y llena de aventuras.
                     </p>
-                    <div class="text-center mb-5">
+                    <!-- <div class="text-center mb-5">
                         <a href="#" class="btn btn-primary tm-btn-big">Download</a>
-                    </div>                    
+                    </div>                     -->
                     <div class="mb-4 d-flex flex-wrap">
                         <div class="mr-4 mb-2">
-                            <span class="tm-text-gray-dark">Resolution: </span><span class="tm-text-primary">1920x1080</span>
+                            <span class="tm-text-gray-dark">Resolución: </span><span class="tm-text-primary">1920x1080</span>
                         </div>
                         <div class="mr-4 mb-2">
-                            <span class="tm-text-gray-dark">Format: </span><span class="tm-text-primary">MP4</span>
+                            <span class="tm-text-gray-dark">Formato: </span><span class="tm-text-primary">MP4</span>
                         </div>
                         <div>
-                            <span class="tm-text-gray-dark">Duration: </span><span class="tm-text-primary">00:00:20</span>
+                            <span class="tm-text-gray-dark">Duración: </span><span class="tm-text-primary" id="subtitles">00:00:20</span>
                         </div>
                     </div>
                     <div class="mb-4">
-                        <h3 class="tm-text-gray-dark mb-3">License</h3>
-                        <p>Free for both personal and commercial use. No need to pay anything. No need to make any attribution.</p>
+                        <h3 class="tm-text-gray-dark mb-3">Consideraciones</h3>
+                        <p>Si compartes en redes sociales, por favor etiquétanos para que más
+                            personas conozcan nuestro trabajo. Nos puedes encontrar en
+                            Instagram como</p>
                     </div>
                     <div>
-                        <h3 class="tm-text-gray-dark mb-3">Tags</h3>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Cloud</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Bluesky</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Nature</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Background</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Timelapse</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Night</a>
-                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block">Real Estate</a>
+                        <h3 class="tm-text-gray-dark mb-3">Etiquetas</h3>
+                        <!-- <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags1">Cloud</a>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags2">Bluesky</a>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags3">Nature</a>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags4">Background</a>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags5">Timelapse</a>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags6">Night</a>
+                        <a href="#" class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags7">Real Estate</a> -->
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags1">Amigas</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags2">Fotos</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags3">Sonrisas</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags4">Recuerdos</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags5">Diversión</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags6">Amistad</p>
+                        <p class="tm-text-primary mr-4 mb-2 d-inline-block" id="tags7">Complicidad</p>
                     </div>
                 </div>
             </div>
