--- a/video-detail.html
+++ b/video-detail.html
@@ -272,7 +272,7 @@
                     <ul class="tm-social-links d-flex justify-content-end">
                         <li class="mb-2"><a href="https://facebook.com/Osvagames20/"><i class="fab fa-facebook" style="color: blue;"></i></a></li>
                         <li class="mb-2"><a href="https://tiktok.com/@Osva_ts"><i class="fab fa-tiktok" style="color: black;"></i></a></li>
-                        <li class="mb-2"><a href="https://instagram.com/mm12_photos/"><i class="fab fa-instagram" style="color: purple;"></i></a></li>
+                        <li class="mb-2"><a href="https://instagram.com/lente_creativooo/"><i class="fab fa-instagram" style="color: purple;"></i></a></li>
                         <li class="mb-2"><a href="https://youtube.com/@MM12YT"><i class="fab fa-youtube" style="color: red;"></i></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Términos de Uso</a>
