--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                     <h2 class="tm-text-primary mb-4">Fotografía Comercial</h2>
                     <p class="tm-mb-50">Empezando en productos, moda y gastronomía para empresar a crear imágenes impactantes que potencian su marca. Desde la conceptualización hasta la postproducción, nos aseguramos de que cada fotografía transmita profesionalismo y atractivo visual, ayudando a destacar en un mercado competitivo.</p>                
                     <div class="text-center">
-                        <a href="https://instagram.com/mm12_photos/" class="btn btn-primary">Ver más</a>
+                        <a href="https://instagram.com/lente_creativooo/" class="btn btn-primary">Ver más</a>
                     </div>
                 </div>                
             </div>
@@ -184,7 +184,7 @@
                     <ul class="tm-social-links d-flex justify-content-end">
                         <li class="mb-2"><a href="https://facebook.com/Osvagames20/"><i class="fab fa-facebook" style="color: blue;"></i></a></li>
                         <li class="mb-2"><a href="https://tiktok.com/@Osva_ts"><i class="fab fa-tiktok" style="color: black;"></i></a></li>
-                        <li class="mb-2"><a href="https://instagram.com/mm12_photos/"><i class="fab fa-instagram" style="color: purple;"></i></a></li>
+                        <li class="mb-2"><a href="https://instagram.com/lente_creativooo/"><i class="fab fa-instagram" style="color: purple;"></i></a></li>
                         <li class="mb-2"><a href="https://youtube.com/@MM12YT"><i class="fab fa-youtube" style="color: red;"></i></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Términos de Uso</a>
