--- a/photo-details.html
+++ b/photo-details.html
@@ -125,7 +125,7 @@
                                 Si compartes tus fotos en redes sociales, por favor etiquétanos para que más
                                 personas conozcan nuestro trabajo. Nos puedes encontrar en
                                 Instagram como
-                                <a href="https://www.instagram.com/mm12_photos/" target="_blank">mm12_photos</a>
+                                <a href="https://www.instagram.com/lente_creativooo/" target="_blank">lente_creativoo</a>
                                 y en YouTube como
                                 <a href="https://www.youtube.com/@mm12yt?si=ok6-Mu4T0VLogus1" target="_blank">MM 1/2</a>. ¡Gracias por tu
                                 apoyo!
@@ -136,7 +136,7 @@
                         <h3 class="tm-text-gray-dark mb-3">Nuestras redes sociales </h3>
                         <a href="https://facebook.com/Osvagames20/"><i class="fab fa-facebook large-icon" style="color: blue;"></i></a>
                         <a href="https://tiktok.com/@Osva_ts"><i class="fab fa-tiktok large-icon" style="color: black;"></i></a>
-                        <a href="https://instagram.com/mm12_photos/"><i class="fab fa-instagram large-icon" style="color: purple;"></i></a>
+                        <a href="https://instagram.com/lente_creativooo/"><i class="fab fa-instagram large-icon" style="color: purple;"></i></a>
                         <a href="https://youtube.com/@MM12YT"><i class="fab fa-youtube large-icon" style="color: red;"></i></a>
                     </div>
                     <div>
@@ -302,7 +302,7 @@
                     <ul class="tm-social-links d-flex justify-content-end">
                         <li class="mb-2"><a href="https://facebook.com/Osvagames20/"><i class="fab fa-facebook" style="color: blue;"></i></a></li>
                         <li class="mb-2"><a href="https://tiktok.com/@Osva_ts"><i class="fab fa-tiktok" style="color: black;"></i></a></li>
-                        <li class="mb-2"><a href="https://instagram.com/mm12_photos/"><i class="fab fa-instagram" style="color: purple;"></i></a></li>
+                        <li class="mb-2"><a href="https://instagram.com/lente_creativooo/"><i class="fab fa-instagram" style="color: purple;"></i></a></li>
                         <li class="mb-2"><a href="https://youtube.com/@MM12YT"><i class="fab fa-youtube" style="color: red;"></i></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Términos de Uso</a>
